#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.68])
AC_INIT([cpuh0g], [0.0.1]) 
AC_CONFIG_FILES([Makefile])
AC_CONFIG_SRCDIR([src/Version.h])
AM_INIT_AUTOMAKE

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC

# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([stdint.h stdlib.h sys/time.h errno.h signal.h sys/prctl.h pthread.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_INLINE
AC_TYPE_SIZE_T
AC_TYPE_UINT64_T

AM_INIT_AUTOMAKE

# Checks for library functions.

AC_OUTPUT
